--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,24 @@
 .App {
   text-align: center;
+}
+
+.App-content {
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
   padding: 16px;
+  text-align: left;
+}
+
+.App-main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.App-results {
+  margin-top: 1em;;
+  min-width: 100%;
 }
